--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-6 col-md-4">
                 <a href="#" class="logo">
-                    <img src="/Logo.png" alt="Logo" class="img-fluid">
+                    <img src="./Logo.png" alt="Logo" class="img-fluid">
                 </a>
             </div>
             <div class="col-6 col-md-8 d-flex justify-content-end align-items-center">
@@ -66,8 +66,8 @@
         <!-- Redes Sociais -->
         <section class="social-media" data-aos="fade-up">
             <ul>
-                <li><a href="https://www.instagram.com/lion.credito/" target="_blank"><img src="/instagram.png" alt="Instagram"></a></li>
-                <li><a href="https://wa.me/21964675001" target="_blank"><img src="/whatsapp.png" alt="WhatsApp"></a></li>
+                <li><a href="https://www.instagram.com/lion.credito/" target="_blank"><img src="./instagram.png" alt="Instagram"></a></li>
+                <li><a href="https://wa.me/21964675001" target="_blank"><img src="./whatsapp.png" alt="WhatsApp"></a></li>
             </ul>
         </section>
     </main>
@@ -79,7 +79,7 @@
                 <p>© 2025 Criado por Juan Fonte | Todos os direitos reservados</p>
             </div>
             <div class="col-12 col-md-6 text-right">
-                <img src="/Logo.png" alt="Logo" class="img-fluid">
+                <img src="./Logo.png" alt="Logo" class="img-fluid">
             </div>
         </div>
     </footer>
