--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </a>
             </div>
             <div class="col-6 col-md-8 d-flex justify-content-end align-items-center">
-                <a href="#link1" class="nav-link">Fale Conosco</a>
+                <a href="https://wa.me/5521964675001?text=Quero%20fazer%20uma%20simula%C3%A7%C3%A3o" class="nav-link">Fale Conosco</a>
             </div>
         </div>
     </header>
@@ -34,7 +34,7 @@
                 <div class="col-12 col-md-6 initialText">
                     <h2 class="title">SEJA MUITO BEM VINDO A LION</h2>
                     <p>Oferecemos soluções de crédito acessíveis, seguras e sem burocracia, para você alcançar seus objetivos com tranquilidade. Com atendimento ágil e personalizado, garantimos taxas justas que se encaixam no seu orçamento, sempre respeitando a privacidade dos seus dados. Aqui, crédito é sinônimo de confiança e facilidade.</p>
-                    <a href="https://wa.me/1234567890" class="btn btn-primary">Fale conosco no WhatsApp</a>
+                    <a href="https://wa.me/5521964675001?text=Quero%20fazer%20uma%20simula%C3%A7%C3%A3o" class="btn btn-primary">Fale conosco no WhatsApp</a>
                 </div>
                 <div class="col-12 col-md-6">
                     <img src="./Background.jpeg" alt="Banner" class="img-fluid">
@@ -67,7 +67,7 @@
         <section class="social-media" data-aos="fade-up">
             <ul>
                 <li><a href="https://www.instagram.com/lion.credito/" target="_blank"><img src="./instagram.png" alt="Instagram"></a></li>
-                <li><a href="https://wa.me/21964675001" target="_blank"><img src="./whatsapp.png" alt="WhatsApp"></a></li>
+                <li><a href="https://wa.me/5521964675001?text=Quero%20fazer%20uma%20simula%C3%A7%C3%A3o" target="_blank"><img src="./whatsapp.png" alt="WhatsApp"></a></li>
             </ul>
         </section>
     </main>
