Adicionando novas abas

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <div class="row">
             <div class="col-6 col-md-4">
                 <a href="#" class="logo">
-                    <img src="./Logo.png" alt="Logo" class="img-fluid">
+                    <img src="/Logo.png" alt="Logo" class="img-fluid">
                 </a>
             </div>
             <div class="col-6 col-md-8 d-flex justify-content-end align-items-center">
-                <a href="https://wa.me/5521964675001?text=Quero%20fazer%20uma%20simula%C3%A7%C3%A3o" class="nav-link">Fale Conosco</a>
+                <a href="https://w.app/lion" class="nav-link">Fale Conosco</a>
             </div>
         </div>
     </header>
@@ -34,7 +34,7 @@
                 <div class="col-12 col-md-6 initialText">
                     <h2 class="title">SEJA MUITO BEM VINDO A LION</h2>
                     <p>Oferecemos soluções de crédito acessíveis, seguras e sem burocracia, para você alcançar seus objetivos com tranquilidade. Com atendimento ágil e personalizado, garantimos taxas justas que se encaixam no seu orçamento, sempre respeitando a privacidade dos seus dados. Aqui, crédito é sinônimo de confiança e facilidade.</p>
-                    <a href="https://wa.me/5521964675001?text=Quero%20fazer%20uma%20simula%C3%A7%C3%A3o" class="btn btn-primary">Fale conosco no WhatsApp</a>
+                    <a href="https://w.app/lion" class="btn btn-primary">Fale conosco no WhatsApp</a>
                 </div>
                 <div class="col-12 col-md-6">
                     <img src="./Background.jpeg" alt="Banner" class="img-fluid">
@@ -62,15 +62,74 @@
                 </div>
             </div>
         </section>
+<!-- Seção de Caixas com ícones e textos -->
+<section class="icon-boxes" data-aos="fade-up">
+    <div class="row">
+        <!-- Caixa 1 -->
+        <div class="col-12 col-md-4 box-icon">
+            <div class="icon">
+                <img src="./dinheiro.png" alt="Antecipação FGTS" class="img-fluid">
+            </div>
+            <h4>Antecipação FGTS</h4>
+        </div>
+
+        <!-- Caixa 2 -->
+        <div class="col-12 col-md-4 box-icon">
+            <div class="icon">
+                <img src="./Servidor.png" alt="Empréstimos Pessoais" class="img-fluid">
+            </div>
+            <h4>Crédito consigno para servidores públicos</h4>
+        </div>
+
+        <!-- Caixa 3 -->
+        <div class="col-12 col-md-4 box-icon">
+            <div class="icon">
+                <img src="./cartao.png" alt="Financiamento de Veículos" class="img-fluid">
+            </div>
+            <h4>Crédito consignado para trabalhadores CLT</h4>
+        </div>
+
+        <!-- Caixa 4 -->
+        <div class="col-12 col-md-4 box-icon">
+            <div class="icon">
+                <img src="./crédito.png" alt="Cartões de Crédito" class="img-fluid">
+            </div>
+            <h4>Crédito consignado para INSS</h4>
+        </div>
+
+        <!-- Caixa 5 -->
+        <div class="col-12 col-md-4 box-icon">
+            <div class="icon">
+                <img src="./cartao.png" alt="Seguros" class="img-fluid">
+            </div>
+            <h4>Cartão Benéfico</h4>
+        </div>
+
+        <!-- Caixa 6 -->
+        <div class="col-12 col-md-4 box-icon">
+            <div class="icon">
+                <img src="./Energia.png" alt="Investimentos" class="img-fluid">
+            </div>
+            <h4>Redução na fatura de energia</h4>
+        </div>
+    </div>
+</section>
+<!-- Section opacidade-->
+<section class="background-section">
+    <div class="overlay">
+        <a href="https://w.app/lion" class="btn-simulate">Faça sua Simulação</a>
+    </div>
+</section>
 
         <!-- Redes Sociais -->
         <section class="social-media" data-aos="fade-up">
             <ul>
-                <li><a href="https://www.instagram.com/lion.credito/" target="_blank"><img src="./instagram.png" alt="Instagram"></a></li>
-                <li><a href="https://wa.me/5521964675001?text=Quero%20fazer%20uma%20simula%C3%A7%C3%A3o" target="_blank"><img src="./whatsapp.png" alt="WhatsApp"></a></li>
+                <li><a href="https://www.instagram.com/lion.credito/" target="_blank"><img src="/instagram.png" alt="Instagram"></a></li>
+                <li><a href="https://w.app/lion" target="_blank"><img src="/whatsapp.png" alt="WhatsApp"></a></li>
             </ul>
         </section>
     </main>
+    
 
     <!-- Footer -->
     <footer class="footer">
@@ -79,7 +138,7 @@
                 <p>© 2025 Criado por Juan Fonte | Todos os direitos reservados</p>
             </div>
             <div class="col-12 col-md-6 text-right">
-                <img src="./Logo.png" alt="Logo" class="img-fluid">
+                <img src="/Logo.png" alt="Logo" class="img-fluid">
             </div>
         </div>
     </footer>
