--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-6 col-md-4">
                 <a href="#" class="logo">
-                    <img src="/Logo.png" alt="Logo" class="img-fluid">
+                    <img src="Logo.png" alt="Logo" class="img-fluid">
                 </a>
             </div>
             <div class="col-6 col-md-8 d-flex justify-content-end align-items-center">
@@ -37,7 +37,7 @@
                     <a href="https://w.app/lion" class="btn btn-primary">Fale conosco no WhatsApp</a>
                 </div>
                 <div class="col-12 col-md-6">
-                    <img src="./Background.jpeg" alt="Banner" class="img-fluid">
+                    <img src="Background.jpeg" alt="Banner" class="img-fluid">
                 </div>
             </div>
         </section>
@@ -68,7 +68,7 @@
         <!-- Caixa 1 -->
         <div class="col-12 col-md-4 box-icon">
             <div class="icon">
-                <img src="./dinheiro.png" alt="Antecipação FGTS" class="img-fluid">
+                <img src="dinheiro.png" alt="Antecipação FGTS" class="img-fluid">
             </div>
             <h4>Antecipação FGTS</h4>
         </div>
@@ -76,7 +76,7 @@
         <!-- Caixa 2 -->
         <div class="col-12 col-md-4 box-icon">
             <div class="icon">
-                <img src="./Servidor.png" alt="Empréstimos Pessoais" class="img-fluid">
+                <img src="Servidor.png" alt="Empréstimos Pessoais" class="img-fluid">
             </div>
             <h4>Crédito consigno para servidores públicos</h4>
         </div>
@@ -84,7 +84,7 @@
         <!-- Caixa 3 -->
         <div class="col-12 col-md-4 box-icon">
             <div class="icon">
-                <img src="./cartao.png" alt="Financiamento de Veículos" class="img-fluid">
+                <img src="cartao.png" alt="Financiamento de Veículos" class="img-fluid">
             </div>
             <h4>Crédito consignado para trabalhadores CLT</h4>
         </div>
@@ -92,7 +92,7 @@
         <!-- Caixa 4 -->
         <div class="col-12 col-md-4 box-icon">
             <div class="icon">
-                <img src="./crédito.png" alt="Cartões de Crédito" class="img-fluid">
+                <img src="crédito.png" alt="Cartões de Crédito" class="img-fluid">
             </div>
             <h4>Crédito consignado para INSS</h4>
         </div>
@@ -100,7 +100,7 @@
         <!-- Caixa 5 -->
         <div class="col-12 col-md-4 box-icon">
             <div class="icon">
-                <img src="./cartao.png" alt="Seguros" class="img-fluid">
+                <img src="cartao.png" alt="Seguros" class="img-fluid">
             </div>
             <h4>Cartão Benéfico</h4>
         </div>
@@ -108,7 +108,7 @@
         <!-- Caixa 6 -->
         <div class="col-12 col-md-4 box-icon">
             <div class="icon">
-                <img src="./Energia.png" alt="Investimentos" class="img-fluid">
+                <img src="Energia.png" alt="Investimentos" class="img-fluid">
             </div>
             <h4>Redução na fatura de energia</h4>
         </div>
@@ -136,9 +136,12 @@
         <div class="row">
             <div class="col-12 col-md-6">
                 <p>© 2025 Criado por Juan Fonte | Todos os direitos reservados</p>
+                <p>Estrada dos Menezes n 850 sala 507<BR>
+                    Empresarial parque das águas<BR>
+                    24451-230<p>
             </div>
             <div class="col-12 col-md-6 text-right">
-                <img src="/Logo.png" alt="Logo" class="img-fluid">
+                <img src="Logo.png" alt="Logo" class="img-fluid">
             </div>
         </div>
     </footer>
