--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
         <!-- Redes Sociais -->
         <section class="social-media" data-aos="fade-up">
             <ul>
-                <li><a href="https://www.instagram.com/lion.credito/" target="_blank"><img src="/instagram.png" alt="Instagram"></a></li>
-                <li><a href="https://w.app/lion" target="_blank"><img src="/whatsapp.png" alt="WhatsApp"></a></li>
+                <li><a href="https://www.instagram.com/lion.credito/" target="_blank"><img src="instagram.png" alt="Instagram"></a></li>
+                <li><a href="https://w.app/lion" target="_blank"><img src="whatsapp.png" alt="WhatsApp"></a></li>
             </ul>
         </section>
     </main>
